<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:id="@+id/wrapperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="7">

            <TextView
                android:id="@+id/textTitle"
                android:text="@string/topLayoutTitle"
                android:textSize="20sp"
                android:textFontWeight="700"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                tools:ignore="NestedWeights"
                tools:targetApi="p" />
            <LinearLayout
                android:layout_weight="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="6">

                    <TextView
                        android:text="@string/title1"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />
                    <TextView
                        android:text="@string/title2"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/title3"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/title4"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/title5"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/title6"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:weightSum="6">

                    <TextView
                        android:text="@string/desc1"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />
                    <TextView
                        android:text="@string/desc2"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/desc3"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/desc4"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/desc5"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                    <TextView
                        android:text="@string/desc6"
                        android:layout_weight="1"
                        android:gravity="center|end"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/betweenLayout"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="start"
            android:weightSum="4">

            <TextView
                android:id="@+id/title2"
                android:text="Nhật ký sản xuất"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center|start"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_weight="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="end"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/title7"
                        android:text="Bón phân"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textSize="13sp"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:gravity="start|center">


                        <TextView
                            android:id="@+id/title8"
                            android:text="Thời gian:"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:gravity="center|start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights" />
                        <TextView
                            android:id="@+id/title12"
                            android:text="20/09/2021"
                            android:textSize="13sp"
                            android:gravity="center|start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights"
                            android:layout_marginStart="8sp"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/title9"
                        android:text="Mô tả:"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:textSize="13sp"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />
                    <TextView
                        android:id="@+id/title10"
                        android:text="Bón rất nhiều phân, ect, Phân Phân Phân"
                        android:layout_weight="1"
                        android:textSize="13sp"
                        android:gravity="center|start"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:gravity="start|center">


                        <TextView
                            android:id="@+id/title11"
                            android:text="Xác thực:"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:gravity="center|start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights" />
                        <TextView
                            android:id="@+id/title13"
                            android:text="Thời gian, Người cập nhật"
                            android:textSize="13sp"
                            android:gravity="center|start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="NestedWeights"
                            android:layout_marginStart="8sp"/>
                    </LinearLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@drawable/ic_launcher_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/TXNGBtn"
                android:text="@string/tem_txng_btn"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F0814A"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ShareBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <Button
                android:id="@+id/ShareBtn"
                android:text="@string/share_btn"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F0814A"
                app:layout_constraintStart_toEndOf="@id/TXNGBtn"
                app:layout_constraintEnd_toStartOf="@id/PostBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="10sp"/>
            <Button
                android:id="@+id/PostBtn"
                android:text="@string/post_btn"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F0814A"
                app:layout_constraintStart_toEndOf="@id/ShareBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--    -->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</RelativeLayout>
